fixed mindanao typo

--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -488,7 +488,7 @@
 				<a href="https://www.linkedin.com/in/mattfajardo/"
 					><i class="fab fa-linkedin"></i>LinkedIn</a
 				>
-				<a href="https://github.com/mattfajardo"
+				<a href="https://github.com/HalfMatt"
 					><i class="fab fa-github"></i>GitHub</a
 				>
 				<a href="mailto:mattfajardo370@gmail.com"
@@ -507,7 +507,7 @@
 			<div class="footer">
 				<p>
 					Portfolio published during the Smart Contracts Code Camp by
-					<span>DEVCON</span> and <span>ICP PH</span> at DEVCON Mindanao
+					<span>DEVCON</span> and <span>ICP PH</span> at DEVCON Cagayan
 					Codecamps.<br /><br />
 					This portfolio showcases my expertise as a Cybersecurity Analyst,
 					Ethical Hacker, and Bug Bounty Hunter. I am passionate about
